Fix css: stretch edit title input

--- a/assets/styles/routes/_main-page.scss
+++ b/assets/styles/routes/_main-page.scss
@@ -108,6 +108,7 @@
 
 		.edit-title-input {
 			display: none;
+			flex-grow: 1;
 			border: 1px solid $gray04;
 			height: 26px;
 			padding: 0 8.28px;
